# os

./: .gitignore  Cargo.toml  Makefile  README.md  create_image.sh  features.md  test_edition.toml
esp/EFI/BOOT/: BOOTX64.EFI
src/: ahci.rs  ai_models.rs  apic.rs  ethernet.rs  filesystem.rs  frame_allocator.rs  graphics.rs  heap_allocator.rs  main.asm  main.rs  pci.rs  process.rs  scheduler.rs  security.rs  syscall.rs  usb.rs  usb_input.rs  virtual_memory.rs
tests/: ai_analyzer.rs
uefi/bootloader/: Makefile  boot.c
uefi/image/: build_image.sh
uefi/kernel/: Makefile  kernel.c  linker.ld
userland/: ai_analyzer.rs  hello.rs
