[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi = { version = "0.35", features = ["panic_handler"] }
x86_64 = "0.15"
uart_16550 = "0.4"
spin = "0.10"
pic8259 = "0.11"
linked_list_allocator = "0.10"

[[bin]]
name = "os"
path = "src/main.rs"
required-features = ["uefi"]

[features]
uefi = ["alloc"]
alloc = []

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[profile.dev]
panic = "abort"